# GCSE-Test-Builder

./: .gitignore  CHANGELOG.md  DEPENDENCIES.md  LICENSE.txt  README.md  build_gui.spec  build_gui_windows.spec  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  run_gui_v2.py
docs/architecture/: README.md  builder-v2.md  data-models.md  decision_log.md  dependencies.md  extractor-v2.md  flows.md  function-index.md  functions.md  overview.md  pipelines.md  testing.md  tests.md  v2_deviations.md  verification.md
scripts/: benchmark_compare.py  benchmark_v2.py  create_dmg.sh  debug_icons.py  fix_ico.py  generate_comparison_report.py  generate_e2e_test_pdfs.py  generate_html_report.py  generate_icons.py  generate_master_report.py  generate_pngs.py  generate_quality_report.py  generate_topic_diagnostics.py  llm_regex_patching.py  run_comparison_tests.py  test_v2_pipeline.py  update_build_resources.py  verify_diagnostics.py  verify_fix.py  verify_frozen_startup.py  verify_gui_setup.py
src/gcse_toolkit/: __init__.py
tests/: conftest.py  test_repro_backfill_warning.py
tests/builder_v2/: __init__.py  test_controller_metadata.py  test_keyword_integration.py  test_loader_integration.py  test_selection_topics.py
tests/core/: __init__.py  test_bounds.py  test_marks.py  test_parts.py  test_questions.py  test_selection.py  test_serialization.py  test_validator.py
tests/e2e/: test_e2e_integration.py  test_e2e_pdf_generation.py  test_markscheme_e2e.py  test_pdf_validation.py  test_selection_v2.py
tests/extractor_v2/: __init__.py  test_bounds_calculator.py  (+3 more)
(+202 files in other folders)
